--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.803.19",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -49,7 +49,7 @@
     "tslint": "~5.11.0"
   },
   "engines": {
-    "node": "6.11.0",
+    "node": "10.16.0",
     "npm": "3.10.10"
   }
 }
